Changes to be committed: 	modified:   index.html 	deleted:    script.js 	modified:   styles.css 	new file:   works-cited.html

--- a/index.html
+++ b/index.html
@@ -3,45 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FNMI Change in Canada - Coming Soon</title>
+    <title>FNMI Clean Water Initiative</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&family=Raleway:wght@300;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>FNMI Change in Canada</h1>
-        </header>
-        <main>
-            <p>We are working towards significant changes to support and uplift First Nations, Métis, and Inuit communities in Canada. Stay tuned for more information!</p>
-            <div id="countdown">
-                <p>Launching in:</p>
-                <div class="timer">
-                    <div class="time-box">
-                        <span id="days">00</span>
-                        <p>Days</p>
-                    </div>
-                    <div class="time-box">
-                        <span id="hours">00</span>
-                        <p>Hours</p>
-                    </div>
-                    <div class="time-box">
-                        <span id="minutes">00</span>
-                        <p>Minutes</p>
-                    </div>
-                    <div class="time-box">
-                        <span id="seconds">00</span>
-                        <p>Seconds</p>
-                    </div>
-                </div>
-            </div>
-            <form>
-                <label for="email">Stay Updated:</label>
-                <input type="email" id="email" name="email" placeholder="Enter your email">
-                <button type="submit">Notify Me</button>
-            </form>
-        </main>
-    </div>
-    <script src="script.js"></script>
+    <header class="header">
+        <nav class="navbar">
+            <a href="#" class="logo">FNMI Clean Water</a>
+            <ul class="nav-links">
+                <li><a href="#about">About</a></li>
+                <li><a href="#impact">Impact</a></li>
+                <li><a href="#action">Take Action</a></li>
+                <li><a href="works-cited.html">Works Cited</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section class="hero">
+        <div class="hero-content">
+            <h1>Access to Clean Drinking Water in Indigenous Communities</h1>
+            <p>Join us in addressing this critical issue and making a difference.</p>
+            <a href="#about" class="btn">Learn More</a>
+        </div>
+    </section>
+    <section id="about" class="about">
+        <h2>About the Issue</h2>
+        <div class="content">
+            <p>Access to clean drinking water is a basic human right, yet many Indigenous communities in Canada face ongoing water advisories and lack access to safe water. This issue has deep historical roots and continues to affect thousands of people today.</p>
+            <p>Statistics show that over 30% of Indigenous communities in Canada have experienced water advisories. This situation has severe impacts on health, well-being, and quality of life.</p>
+        </div>
+    </section>
+    <section id="impact" class="impact">
+        <h2>Impact</h2>
+        <div class="content">
+            <p>The lack of clean drinking water disproportionately affects Indigenous communities, leading to health issues such as gastrointestinal infections, skin conditions, and other waterborne diseases. It also creates social and economic challenges, hindering education, economic development, and overall community well-being.</p>
+        </div>
+    </section>
+    <section id="action" class="action">
+        <h2>Take Action</h2>
+        <div class="content">
+            <p>Everyone can play a role in addressing this issue. Here's how you can help:</p>
+            <ul>
+                <li><strong>Individual Level:</strong> Educate yourself and others, donate to relevant organizations, and support clean water initiatives.</li>
+                <li><strong>Local Level:</strong> Advocate for local policy changes, participate in community events, and support local Indigenous-led projects.</li>
+                <li><strong>Political Level:</strong> Contact your representatives, support legislation that addresses water issues, and vote for candidates who prioritize Indigenous rights and environmental justice.</li>
+                <li><strong>Global Level:</strong> Raise awareness on international platforms, support global Indigenous rights movements, and connect with international organizations working on water issues.</li>
+            </ul>
+        </div>
+    </section>
+    <footer class="footer">
+        <p>&copy; Serenity Studios 2024 | Jonathan H</p>
+    </footer>
 </body>
 </html>
